<resources>
    <string name="app_name">WorldApp</string>
    <string name="log_in_button">Log In</string>
    <string name="register_label_text">No account? Register here!</string>
    <string name="title_activity_home">ActivityHome</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_trips">Trips</string>
    <string name="title_profile">Profile</string>
    <string name="title_inbox">Inbox</string>
    <string name="delete_account_string">Delete account</string>
    <string name="sign_out_string">Sign Out</string>
    <string name="edit_profile">Edit profile</string>
    <string name="tour_listings">Tour listings</string>
    <string name="parking_listings">Parking listings</string>
    <string name="delete_account">Are you sure you want to delete your account?</string>
    <string name="ok">Yes</string>
    <string name="no">NO</string>
    <string name="favorites">Favorites</string>
    <string name="fill_all_fields">All fields must be filled!</string>
    <string name="no_tour_text">You currently have no listed tour!</string>
    <string name="add_tour_text">Why not add one and start a new experience?</string>
    <string name="title_activity_maps">Map</string>
    <string name="meeting_point">Meeting point</string>
    <string name="tour_owner">Tour owner</string>
    <string name="meeting_location">Enter the meeting location</string>
    <string name="meeting_map_point">Choose point on map</string>
    <string name="next_text">Next</string>
    <string name="finish_text">Finish</string>
    <string name="message_text">Message</string>
    <string name="parking_spots">Parking spots</string>
    <string name="save_text">Save</string>
    <string name="maximum_price_text">Maximum price</string>
    <string name="city_text">City</string>
    <string name="region_text">Region</string>
    <string name="country_text">Country</string>
    <string name="tour_type_text">Type (walking, bike, car)</string>
    <string name="parkings_text">Parkings</string>
    <string name="parking_type_text">Parking type</string>
    <string name="parking_location_text">Parking location</string>
    <string name="euro_sign"><![CDATA[&#8364]]></string>
    <string name="spare_parking_text">Have a spare parking spot?</string>
    <string name="accommodation_listings">Accommodation listings</string>
</resources>
