<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    >

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".Activities.AddTour4Activity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/toolbar_with_back_button"/>

            <TextView
                android:id="@+id/tv_add_tour_meeting_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar_with_back_button"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                style="@style/BasicText"
                android:text="@string/meeting_location"/>

            <EditText
                android:id="@+id/et_add_tour_location"
                style="@style/BasicText"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLines="3"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:scrollbars="vertical"
                android:hint="Meeting location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_add_tour_meeting_location"
                />

            <TextView
                android:id="@+id/tv_add_tour_choose_on_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meeting_map_point"
                android:layout_below="@id/et_add_tour_location"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                style="@style/BasicText"/>

            <FrameLayout
                android:id="@+id/fl_map_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_add_tour_choose_on_map"
                android:layout_marginTop="20dp">
                <com.google.android.gms.maps.MapView
                    android:id="@+id/map_add_tour"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"/>
            </FrameLayout>

            <Button
                android:id="@+id/btn_add_tour_next_4"
                android:text="@string/finish_text"
                style="@style/BasicText"
                android:layout_margin="20dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/round_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="RegisterTour" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>