<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".Activities.AccommodationFilterActivity">

    <include layout="@layout/toolbar_with_back_button_and_filter"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/toolbar_with_back_button">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_filter_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BasicText"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_filter_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    style="@style/BasicText"
                    android:hint="@string/country_text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_filter_region"
                android:layout_width="match_parent"
                style="@style/BasicText"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/til_filter_country"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_filter_region"
                    style="@style/BasicText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:hint="@string/region_text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_filter_city"
                android:layout_width="match_parent"
                style="@style/BasicText"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/til_filter_region"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_filter_city"
                    style="@style/BasicText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:hint="@string/city_text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_filter_price"
                android:layout_width="match_parent"
                style="@style/BasicText"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/til_filter_city"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_filter_price"
                    style="@style/BasicText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/maximum_price_text"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_filter_start_dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Start date"
                android:textAllCaps="false"
                style="@style/BasicText"
                android:background="@color/fui_transparent"
                android:layout_below="@+id/til_filter_price"
                android:onClick="SelectStartDate"/>

            <TextView
                android:id="@+id/tv_filter_set_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/btn_filter_start_dates"
                android:layout_below="@+id/til_filter_price"
                style="@style/BasicText"
                android:textColor="@color/colorAccent"/>

            <Button
                android:id="@+id/btn_filter_tour_end_dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="End date"
                android:textAllCaps="false"
                style="@style/BasicText"
                android:background="@color/fui_transparent"
                android:layout_below="@+id/btn_filter_start_dates"
                android:onClick="SelectEndDate"/>

            <TextView
                android:id="@+id/tv_filter_set_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/btn_filter_tour_end_dates"
                android:layout_below="@+id/btn_filter_start_dates"
                style="@style/BasicText"
                android:textColor="@color/colorAccent"/>
        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_filter_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BasicText"
        android:src="@drawable/ic_search"
        android:background="@drawable/round_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"/>

</RelativeLayout>